fix informant template
Change-Id: Ibf5abc85c9eec7d47de72fe856ea92c440735919

--- a/templates/proxy/informant.conf.erb
+++ b/templates/proxy/informant.conf.erb
@@ -1,6 +1,6 @@
 
 [filter:informant]
-use = egg:swift#informant
+use = egg:informant#informant
 <% if @statsd_host -%>
 statsd_host = <%= @statsd_host %>
 <% end -%>
